# laporan-kepegawaian

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  env.example  main.py  pyproject.toml  requirement.txt
app/: main.py
app/core/: databases.py  enums.py  helper.py  log_loader.py
app/models/: dnp.py  duk.py  kenaikan_berkala.py  kontrak.py  lepas_tanggungan_anak.py  mutasi.py  organisasi.py  so.py  statistik.py
app/routes/: dnp.py  duk.py  kenaikan_berkala.py  kenaikan_berkala_old.py  kontrak.py  lepas_tanggungan_anak.py  main.py  mutasi.py  so.py  statistik.py
app/services/: dnp.py  duk.py  kenaikan_berkala.py  kontrak.py  lepas_tanggungan_anak.py  mutasi.py  so.py  statistik.py
app/views/: so.html
core/: config.py  enums.py  excel_helper.py  helper.py
core/model/: dnp.py  duk.py  kenaikan_berkala.py  kontrak.py  lepas_tanggungan_anak.py  mutasi.py  organisasi.py  so.py  statistik.py
core/routes/: dnp.py  duk.py  kenaikan_berkala.py  kenaikan_berkala_old.py  kontrak.py  lepas_tanggungan_anak.py  main.py  mutasi.py  so.py  statistik.py
core/services/: dnp.py  duk.py  kenaikan_berkala.py  kontrak.py  lepas_tanggungan_anak.py  mutasi.py  so.py  statistik.py
core/views/: so.html
template/: template_dnp.xlsx  template_duk.xlsx  template_kenaikan_berkala.xlsx  template_kontrak.xlsx  template_lta.xlsx  template_mutasi.xlsx  template_pendidikan_2.xlsx
test/: __init__.py  dnp.py  dnp_test.py  duk.py  statistik_test.py
tests/: test_dnp.py  test_kenaikan_berkala.py  test_lepas_tanggungan_anak.py
