[project]
name = "laporan-kepegawaian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pymysql-pool>=0.5.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "icecream>=2.1.8",
    "swifter>=1.4.0",
]
