[project]
name = "laporan-kepegawaian"
version = "0.1.0"
offline = true
description = "Simple API for Laporan Kepegawaian"
authors = [
    { name = "Bagus Sudrajat", email = "kentoes.pdam@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pymysql-pool>=0.5.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "icecream>=2.1.8",
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]